[package]
name = "db_catalog"
version = "0.1.0"
authors = ["vigneshsatha"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.0"
tokio = { version = "1.0.1", features = ["full"] }
async-trait = "0.1.42"
